# Felicity

./: .editorconfig  .gitignore  README.md  build.gradle  changelog  changelogs.md  common.gradle  crowdin.yml  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  error_report.yml  feature_request.yml
.github/init-scripts/: abi-arm64-v8a.gradle  abi-armeabi-v7a.gradle  abi-foss-universal-64bit.gradle  abi-play-universal-64bit.gradle  abi-x86.gradle  abi-x86_64.gradle
.github/workflows/: build_pre_release.yml  build_preview.yml  build_release.yml
app/: build.gradle
app/schemas/app.simple.felicity.database.instances.AudioDatabase/: 1.json
app/schemas/app.simple.felicity.database.instances.StackTraceDatabase/: 1.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: zoom_in.xml  zoom_in_image.xml
app/src/main/res/drawable/: ic_artist.xml  ic_dot_12dp.xml  ic_dot_16dp.xml  ic_felicity.xml
app/src/main/res/layout/: activity_crash.xml  adapter_art_flow.xml  adapter_bottom_menu_divider.xml  adapter_floating_menu_context.xml  adapter_grid_home.xml  adapter_grid_image.xml  adapter_header_home.xml  adapter_home.xml  adapter_home_simple.xml  adapter_inure_songs.xml  adapter_loader.xml  adapter_simple_songs.xml  adapter_songs.xml  adapter_songs_flow.xml  adpater_art_flow_rv.xml  checkbox.xml  dialog_volume_knob.xml  fragment_albums.xml  fragment_artflow.xml  fragment_artflow_rv.xml  fragment_default_player.xml  fragment_home.xml  fragment_home_simple.xml  fragment_home_spanned.xml  fragment_loader.xml  fragment_songs.xml  fragment_splash_screen.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  integers.xml  non_translatable_string.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
assets/: banner.psd  def_data.txt  icon.ai  icon.psd
blur/: build.gradle  consumer-rules.pro
blur/src/main/cpp/: CMakeLists.txt  blur_jni.cpp  gaussian_blur.cpp  gaussian_blur.h
blur/src/main/res/values/: attrs.xml
core/: build.gradle
core/src/main/res/drawable/: ic_felicity.xml  ic_felicity_full.xml
core/src/main/res/values/: non_translatable_string.xml  plurals.xml  strings.xml
decorations/: build.gradle  proguard-rules.pro
decorations/src/main/res/anim/: list_animation_controller.xml  list_item_animation.xml  zoom_in.xml
decorations/src/main/res/drawable/: fg_art_tint.xml  ic_album_16dp.xml  ic_app_settings.xml  ic_artist_16dp.xml  ic_beta_12dp.xml  ic_bookmark.xml  ic_bookmark_16dp.xml  ic_bookmark_add_16dp.xml  ic_bookmark_remove_16dp.xml  ic_clock.xml  ic_composer.xml  ic_composer_16dp.xml  ic_cross.xml  ic_cross_16dp.xml  ic_date_range_16dp.xml  ic_divider.xml  ic_edit_16dp.xml  ic_fast_forward.xml  ic_fast_rewind.xml  ic_fast_thumb.xml  ic_favorite_filled_16dp.xml  ic_folder_open_outline.xml  ic_fullscreen.xml  ic_globe.xml  ic_gumroad.xml  ic_headset.xml  ic_highlight.xml  ic_hires_12dp.xml  ic_home.xml  ic_hourglass_bottom.xml  ic_hourglass_top.xml  ic_hq_12dp.xml  ic_image_16dp.xml  ic_info.xml  ic_keep_screen_on.xml  ic_key.xml  ic_locked.xml  ic_locked_16dp.xml  ic_lossless_12dp.xml  ic_lyrics.xml  (+32 more)
decorations/src/main/res/layout/: adapter_floating_menu.xml  miniplayer_view.xml
decorations/src/main/res/values/: attrs.xml  dimens.xml
engine/: build.gradle  proguard-rules.pro
engine/src/main/: AndroidManifest.xml
engine/src/main/jni/: CMakeLists.txt  aaudio-player.cpp  aaudio-player.h  dsp-engine.cpp  dsp-engine.h  felicity_usb_dac.cpp  felicity_usb_dac.h  oboe-player.cpp  oboe-player.h  uac_descriptors.h  uac_negotiator.cpp  uac_negotiator.h  uac_parser.cpp  uac_parser.h  usb_iso_stream.cpp  usb_iso_stream.h  usb_ring_buffer.h  visualizer-fft.cpp  waveform-extractor.cpp
engine/src/main/jni/aaudio/: aaudio-player.cpp
engine/src/main/jni/dsp/: dsp-engine.h
engine/src/main/jni/oboe/: oboe-player.cpp  oboe-player.h
engine/src/main/jni/usb_driver/: felicity_usb_dac.cpp  felicity_usb_dac.h  uac_descriptors.h  uac_negotiator.cpp  uac_parser.cpp  usb_iso_stream.cpp  usb_iso_stream.h  usb_ring_buffer.h
engine/src/main/res/drawable/: ic_thumb_up.xml
engine/src/main/res/xml/: usb_device_filter.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 20.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
milkdrop/: build.gradle
milkdrop/src/main/jni/: CMakeLists.txt  milkdrop-bridge.cpp
music/: build.gradle  proguard-rules.pro
music/schemas/app.simple.felicity.database.instances.AudioDatabase/: 1.json
music/src/foss/res/layout/: dialog_license_key.xml
music/src/main/: AndroidManifest.xml
music/src/main/assets/server/: app.js  content.css  context.js  helpers.js  index.html  layout.css  overlays.css  playback.js  player-bar.css  player.js  render.js  resize.js  state.js  style.css  theme.css  theme.js
music/src/main/res/drawable/: bg_milkdrop_controls.xml  bg_milkdrop_top_overlay.xml  ic_dot_16dp.xml  (+5 more)
preferences/: build.gradle
repository/: build.gradle  consumer-rules.pro  proguard-rules.pro
repository/schemas/app.simple.felicity.repository.database.instances.AudioDatabase/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
repository/schemas/app.simple.felicity.repository.database.instances.EqualizerDatabase/: 1.json  2.json
repository/schemas/app.simple.felicity.repository.database.instances.StackTraceDatabase/: 1.json
repository/src/main/: AndroidManifest.xml
repository/src/main/jni/: CMakeLists.txt  taglib_jni.cpp
repository/src/main/resources/: artist_whitelist.txt
scripts/: compress.py
shared/: build.gradle
theme/: build.gradle  proguard-rules.pro
toolkit/: build.gradle
toolkit/src/main/cpp/: Blend_advsimd.S  Blur_advsimd.S  CMakeLists.txt  ColorMatrix.cpp  ColorMatrix_advsimd.S  Convolve_advsimd.S  Lut3d_advsimd.S  RenderScriptToolkit.h  Resize_advsimd.S  YuvToRgb.cpp  YuvToRgb_advsimd.S
(+1539 files in other folders)
